--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Carles Mateu",email = "carles.mateu@udl.cat"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "click (>=8.1.8,<9.0.0)",
     "loguru (>=0.7.3,<0.8.0)",
@@ -21,3 +21,7 @@ icecream = "^2.1.4"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[project.scripts]
+xarxes2025 = "xarxes2025.cli:cli"
+
