--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "click (>=8.1.8,<9.0.0)",
     "loguru (>=0.7.3,<0.8.0)",
-    "pillow (>=11.1.0,<12.0.0)"
+    "pillow (>=11.1.0,<12.0.0)",
+    "opencv-python (>=4.11.0.86,<5.0.0.0)"
 ]
 
 [tool.poetry]
